Lab10/templates/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
spec:
  selector:
    app: petstore
  ports:
  - port: 80
    targetPort: http-server
    name: http
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "petstore"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: "subnet-04ca5ed128297ecb3, subnet-04fcfdae63c5e36ea"
  labels:
    app: petstore
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: "petstore"
          servicePort: 80
